--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "import": "0.0.6",
     "inversify": "^5.0.5",
+    "node-gyp": "^7.1.2",
     "puppeteer": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
