--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "ts-node ./Main.ts"
+    "dev": "ts-node ./Main.ts"
   },
   "keywords": [],
   "author": "",
