--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node ./Main.ts",
-    "exp" : "ts-node Test.ts"
+    "exp": "ts-node Test.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20"
   }
 }
