--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./Main.ts",
+    "dev": "ts-node ./Example/Application.ts",
     "exp": "ts-node Test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "express": "^4.17.1",
     "import": "0.0.6",
     "inversify": "^5.0.5",
