--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
         "experimentalDecorators": true,
         "target": "ES6",
         "moduleResolution": "Node",
-        "module": "commonjs",
+        "module": "commonjs"
     },
 }
